--- a/requestqueue/build.gradle
+++ b/requestqueue/build.gradle
@@ -23,6 +23,17 @@ dependencies {
 
 //    compile 'com.android.support:appcompat-v7:23.0.1'
 
+
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    // Set this dependency if you want to use Hamcrest matching
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.easytesting:fest:1.0.16'
+    testCompile 'com.squareup:fest-android:1.0.8'
+    testCompile "org.robolectric:robolectric:3.0"
+
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.gson:gson:2.2.4'
 
